--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                             In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                             Verifcation<br>
                         </p>
-                        <a href="https://locked3.com/cl/i/6d827m" target="_blank"><button>Verify Human</button></a>
+                        <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
                     </div>
         </div>
 
@@ -183,7 +183,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://locked3.com/cl/i/6d827m" target="_blank"><button>Verify Human</button></a>
+                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
             </div>
         </div>
     </div>
@@ -205,7 +205,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://locked3.com/cl/i/6d827m" target="_blank"><button>Verify Human</button></a>
+                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
             </div>
         </div>
     </div>
@@ -225,7 +225,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://locked3.com/cl/i/6d827m" target="_blank"><button>Verify Human</button></a>
+                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
             </div>
         </div>
     </div>
@@ -246,7 +246,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://locked3.com/cl/i/6d827m" target="_blank"><button>Verify Human</button></a>
+                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
             </div>
         </div>
 
@@ -269,7 +269,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://locked3.com/cl/i/6d827m" target="_blank"><button>Verify Human</button></a>
+                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
             </div>
         </div>
     </div>
