--- a/apple/apple/index.html
+++ b/apple/apple/index.html
@@ -188,7 +188,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
@@ -210,7 +210,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
@@ -230,7 +230,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
@@ -251,7 +251,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
 
@@ -274,7 +274,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
