--- a/index.html
+++ b/index.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html><html lang="en" style="height: 100%;">
-<!-- Mirrored from giveawayhub.win/giftcard/ by HTTrack Website Copier/3.x [XR&CO'2014], Mon, 31 Mar 2025 17:57:35 GMT -->
 <head>
     <title>Beast Giveaway </title>
-<meta name="description" content="Beast Giveaway ">
-<meta property="og:title" content="Beast Giveaway ">
-<meta property="og:description" content="Beast Giveaway ">
+
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- SEO Meta Tags -->
+<title>Mars Giveaway - Win Amazing Prizes!</title>
+<meta name="description" content="Join the Mars Giveaway for your chance to win exciting prizes! Participate now and grab your rewards. No purchase necessary.">
+<meta name="keywords" content="Mars Giveaway, win prizes, online contest, free giveaways, sweepstakes">
+<meta name="robots" content="index, follow">
 <meta name="referrer" content="no-referrer">
+
+<!-- Open Graph Meta Tags (For Facebook & Social Media Sharing) -->
+<meta property="og:title" content="Mars Giveaway - Win Amazing Prizes!">
+<meta property="og:description" content="Join the Mars Giveaway for your chance to win exciting prizes! Participate now and grab your rewards.">
+<meta property="og:url" content="https://marsgiveaway.pw/">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card (For Better Twitter Sharing) -->
+<meta name="twitter:card" content="summary">
+<meta name="twitter:title" content="Mars Giveaway - Win Amazing Prizes!">
+<meta name="twitter:description" content="Join the Mars Giveaway for your chance to win exciting prizes! Participate now and grab your rewards.">
+<meta name="twitter:url" content="https://marsgiveaway.pw/">
+
+<!-- Canonical URL (Prevents Duplicate Content Issues) -->
+<link rel="canonical" href="https://marsgiveaway.pw/">
 
 <!-- Analytics -->
 
