--- a/mohua/index.html
+++ b/mohua/index.html
@@ -129,14 +129,7 @@
     </h2>
     <form id="connect-form">
       <div class="form-group">
-        <label for="email">Phone Number</label>
-        <input
-          type="email"
-          id="email"
-          name="email"
-          placeholder="Enter Your Phone"
-          required
-        />
+       
       </div>
       <div class="form-group">
         <label for="region">Select Your Region</label>
@@ -158,7 +151,7 @@
           <option value="26-30">36–45</option>
         </select>
       </div>
-      <a href="verify.html" type="submit" class="submit-btn">Connect Now</a>
+      <a href="verify.html" type="submit" class="submit-btn">Verify Now</a>
     </form>
   </div>
 </div>
