--- a/mohua/index.html
+++ b/mohua/index.html
@@ -37,8 +37,8 @@
           <div class="box-content">
             <h3>Afsana Rahman</h3>
             <p class="cards-remaining">🕒 Active User: 20 years old – Last active 5 mins ago</p>
- <button class="submit-btn" onclick="_om()">➡️ [Connect Now]</button>
-
+ <button class="gene-btn" onclick="_om()">➡️ [Connect Now]</button>
+ <button class="submit-btn" onclick="_om()">I am Not a Robot!</button>
           </div>
         </div>
         <div class="box">
