--- a/mohua/index.html
+++ b/mohua/index.html
@@ -37,7 +37,7 @@
           <div class="box-content">
             <h3>Afsana Rahman</h3>
             <p class="cards-remaining">🕒 Active User: 20 years old – Last active 5 mins ago</p>
- <button class="gene-btn" onclick="_om()">➡️ [Connect Now]</button>
+<button class="gene-btn">➡️ [Connect Now]</button>
 
           </div>
         </div>
