--- a/mohua/index.html
+++ b/mohua/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🎉 Connect with Verified Profiles</title>
+    <title>❤️ Meet Real Verified Women Ready to Chat</title>
     <link rel="stylesheet" href="css/style.css" />
     <script src="js/main.js" defer></script>
   </head>
@@ -28,12 +28,12 @@
           <div class="box-image">
             <img src="images/amazon.jpg" alt="Play Store Gift Card" />
           </div>
-          <div class="box-content">
-            <h3>Afsana Rahman</h3>
-            <p class="cards-remaining">🕒 Active User: 20 years old – Last active 5 mins ago</p>
-<button class="gene-btn">➡️ [Connect Now]</button>
-
-          </div>
+         <div class="box-content">
+  <h3>👩 Afsana Rahman, 20</h3>
+  <p>💬 "Love meeting new people and making real connections."</p>
+  <p>🟢 Active 5 mins ago</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
         <div class="box">
           <div class="box-image">
