--- a/mohua/index.html
+++ b/mohua/index.html
@@ -40,50 +40,57 @@
             <img src="images/google.jpg" alt="Amazon Gift Card" />
           </div>
           <div class="box-content">
-            <h3>Tahmina Haque</h3>
-            <p class="cards-remaining">🕒 Active User: 21 years old – Low wait time</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+  <h3>👩 Tahmina Haque, 21</h3>
+  <p>💬 "Looking to meet someone kind and honest."</p>
+  <p>🟢 Active 10 mins ago</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
         <div class="box">
           <div class="box-image">
             <img src="images/apple.png" alt="Xbox Gift Card" />
           </div>
           <div class="box-content">
-            <h3>Sanjida Alam</h3>
-            <p class="cards-remaining">🕒 Active User: 22 years old – Response time: Fast</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+  <h3>👩 Sanjida Alam, 22</h3>
+  <p>💬 "Just want good vibes and real talks."</p>
+  <p>🟢 Online now</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
         <div class="box">
           <div class="box-image">
             <img src="images/roblox.png" alt="Gift Card" />
           </div>
-          <div class="box-content">
-            <h3>Fariha Anjum</h3>
-            <p class="cards-remaining">🕒 Active User: 24 years old – Verified today</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+         <div class="box-content">
+  <h3>👩 Fariha Anjum, 24</h3>
+  <p>💬 "New here, looking for genuine people."</p>
+  <p>🟢 Verified today</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+
         </div>
         <div class="box">
           <div class="box-image">
             <img src="images/xbox.jpg" alt="Gift Card" />
           </div>
-          <div class="box-content">
-            <h3>Rumana Karim</h3>
-            <p class="cards-remaining">🕒 Active User: 23 years old – Limited availability</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+         <div class="box-content">
+  <h3>👩 Rumana Karim, 23</h3>
+  <p>💬 "I reply fast, don’t be shy to say hi!"</p>
+  <p>🟡 Limited availability</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
         <div class="box">
           <div class="box-image">
             <img src="images/paypal.jpg" alt="Gift Card" />
           </div>
-          <div class="box-content">
-            <h3>Maliha Chowdhury</h3>
-            <p class="cards-remaining">🕒 Active User: 20 years old – Quick access</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+         <div class="box-content">
+  <h3>👩 Maliha Chowdhury, 20</h3>
+  <p>💬 "Let’s chat and see where it goes."</p>
+  <p>🟢 Quick access</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
+
         </div>
         <div class="box">
           <div class="box-image">
@@ -99,27 +106,29 @@
           <div class="box-image">
             <img src="images/shein.png" alt="Gift Card" />
           </div>
-          <div class="box-content">
-            <h3>Sumaiya Akter</h3>
-            <p class="cards-remaining">🕒 Active User: 22 years old – Online now</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+         <div class="box-content">
+  <h3>👩 Sumaiya Akter, 22</h3>
+  <p>💬 "Open to meaningful conversations."</p>
+  <p>🟢 Online now</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
         <div class="box">
           <div class="box-image">
             <img src="images/steam.png" alt="Gift Card" />
           </div>
           <div class="box-content">
-            <h3>Nusrat Jahan</h3>
-            <p class="cards-remaining">🕒 Active User: 21 years old – Available briefly</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+  <h3>👩 Nusrat Jahan, 21</h3>
+  <p>💬 "Here for real connections only."</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
       </div>
     </main>
    <footer class="footer">
   <p class="footer-text">
-    © 2025 — Social Connect System.
+    © 2025 RealMeet — Verified Connections Only.
   </p>
 </footer>
 
