--- a/mohua/index.html
+++ b/mohua/index.html
@@ -97,10 +97,11 @@
             <img src="images/netflix.png" alt="Gift Card" />
           </div>
           <div class="box-content">
-            <h3>Sharmin Sultana</h3>
-            <p class="cards-remaining">🕒 Active User: 19 years old – Available briefly</p>
-            <button class="gene-btn">➡️ [Connect Now]</button>
-          </div>
+  <h3>👩 Sharmin Sultana, 19</h3>
+  <p>💬 "On for a bit — message me fast!"</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
         <div class="box">
           <div class="box-image">
