--- a/mohua/index.html
+++ b/mohua/index.html
@@ -29,7 +29,7 @@
             <img src="images/amazon.jpg" alt="Play Store Gift Card" />
           </div>
          <div class="box-content">
-  <h3>Afsana Rahman, 20</h3>
+  <h3>Afsana Rahman</h3>
   <p>💬 "Love meeting new people and making real connections."</p>
   <p>🟢 Active 5 mins ago</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -40,7 +40,7 @@
             <img src="images/google.jpg" alt="Amazon Gift Card" />
           </div>
           <div class="box-content">
-  <h3>Tahmina Haque, 21</h3>
+  <h3>Tahmina Haque</h3>
   <p>💬 "Looking to meet someone kind and honest."</p>
   <p>🟢 Active 10 mins ago</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -62,7 +62,7 @@
             <img src="images/roblox.png" alt="Gift Card" />
           </div>
          <div class="box-content">
-  <h3>Fariha Anjum, 24</h3>
+  <h3>Fariha Anjum</h3>
   <p>💬 "New here, looking for genuine people."</p>
   <p>🟢 Verified today</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -74,7 +74,7 @@
             <img src="images/xbox.jpg" alt="Gift Card" />
           </div>
          <div class="box-content">
-  <h3>Rumana Karim, 23</h3>
+  <h3>Rumana Karim</h3>
   <p>💬 "I reply fast, don’t be shy to say hi!"</p>
   <p>🟡 Limited availability</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -85,7 +85,7 @@
             <img src="images/paypal.jpg" alt="Gift Card" />
           </div>
          <div class="box-content">
-  <h3>Maliha Chowdhury, 20</h3>
+  <h3>Maliha Chowdhury</h3>
   <p>💬 "Let’s chat and see where it goes."</p>
   <p>🟢 Quick access</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -108,7 +108,7 @@
             <img src="images/shein.png" alt="Gift Card" />
           </div>
          <div class="box-content">
-  <h3>Sumaiya Akter, 22</h3>
+  <h3>Sumaiya Akter</h3>
   <p>💬 "Open to meaningful conversations."</p>
   <p>🟢 Online now</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -119,7 +119,7 @@
             <img src="images/steam.png" alt="Gift Card" />
           </div>
           <div class="box-content">
-  <h3>Nusrat Jahan, 21</h3>
+  <h3>Nusrat Jahan</h3>
   <p>💬 "Here for real connections only."</p>
   <p>🟡 Available briefly</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
