--- a/mohua/index.html
+++ b/mohua/index.html
@@ -12,7 +12,7 @@
   <body>
     <nav id="navbar" class="">
       <div class="nav-wrapper">
-        <a href="#" class="logo">🎉 Connect with Verified Profiles</a>
+        <a href="#" class="logo">🔒 Secure, Private, and Real-Time Dating</a>
         <!-- Navbar Links -->
         <ul id="menu">
           <li><a style="color: #2196f3" href="#home">Home</a></li>
