--- a/mohua/index.html
+++ b/mohua/index.html
@@ -17,7 +17,7 @@
         <ul id="menu">
           <li><a style="color: #2196f3" href="#home">Home</a></li>
           <li>
-            <a href="https://t.me/DaliyBinsTutorialchannel/4">How It Works</a>
+            <a href="#">How It Works</a>
           </li>
         </ul>
       </div>
