--- a/mohua/index.html
+++ b/mohua/index.html
@@ -51,7 +51,7 @@
             <img src="images/apple.png" alt="Xbox Gift Card" />
           </div>
           <div class="box-content">
-  <h3>Sanjida Alam, 22</h3>
+  <h3>Sanjida Alam</h3>
   <p>💬 "Just want good vibes and real talks."</p>
   <p>🟢 Online now</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -97,7 +97,7 @@
             <img src="images/netflix.png" alt="Gift Card" />
           </div>
           <div class="box-content">
-  <h3>Sharmin Sultana, 19</h3>
+  <h3>Sharmin Sultana</h3>
   <p>💬 "On for a bit — message me fast!"</p>
   <p>🟡 Available briefly</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
