--- a/mohua/index.html
+++ b/mohua/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="box">
           <div class="box-image">
-            <img src="images/amazon.jpg" alt="Play Store Gift Card" />
+            <img src="images/amazon.jpg" alt="Play Store Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Afsana Rahman</h3>
@@ -37,7 +37,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/google.jpg" alt="Amazon Gift Card" />
+            <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Tahmina Haque</h3>
@@ -48,7 +48,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/apple.png" alt="Xbox Gift Card" />
+            <img src="images/apple.png" alt="Xbox Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Sanjida Alam</h3>
@@ -59,7 +59,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/roblox.png" alt="Gift Card" />
+            <img src="images/roblox.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Fariha Anjum</h3>
@@ -71,7 +71,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/xbox.jpg" alt="Gift Card" />
+            <img src="images/xbox.jpg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Rumana Karim</h3>
@@ -82,7 +82,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/paypal.jpg" alt="Gift Card" />
+            <img src="images/paypal.jpg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Maliha Chowdhury</h3>
@@ -94,7 +94,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/netflix.png" alt="Gift Card" />
+            <img src="images/netflix.png" alt="Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Sharmin Sultana</h3>
@@ -105,7 +105,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/shein.png" alt="Gift Card" />
+            <img src="images/shein.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Sumaiya Akter</h3>
@@ -116,7 +116,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/steam.png" alt="Gift Card" />
+            <img src="images/steam.png" alt="Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Nusrat Jahan</h3>
