--- a/mohua/index.html
+++ b/mohua/index.html
@@ -29,7 +29,7 @@
             <img src="images/amazon.jpg" alt="Play Store Real-Time Dating" />
           </div>
          <div class="box-content">
-  <h3>Afsana Rahman</h3>
+  <h3>Sadia Akhter</h3>
   <p>💬 "Love meeting new people and making real connections."</p>
   <p>🟢 Active 5 mins ago</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -40,7 +40,7 @@
             <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
           </div>
           <div class="box-content">
-  <h3>Tahmina Haque</h3>
+  <h3>Afia Nargis</h3>
   <p>💬 "Looking to meet someone kind and honest."</p>
   <p>🟢 Active 10 mins ago</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
