--- a/mohua/index.html
+++ b/mohua/index.html
@@ -74,7 +74,7 @@
             <img src="images/xbox.jpg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
-  <h3>Rumana Karim</h3>
+  <h3>Mimita Khatun/h3>
   <p>💬 "I reply fast, don’t be shy to say hi!"</p>
   <p>🟡 Limited availability</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -85,7 +85,7 @@
             <img src="images/paypal.jpg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
-  <h3>Maliha Chowdhury</h3>
+  <h3>Jannatul Fari</h3>
   <p>💬 "Let’s chat and see where it goes."</p>
   <p>🟢 Quick access</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
