--- a/mohua/index.html
+++ b/mohua/index.html
@@ -85,7 +85,7 @@
             <img src="images/paypal.jpg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
-  <h3>Jannatul Fari</h3>
+  <h3>Laboni Akter</h3>
   <p>💬 "Let’s chat and see where it goes."</p>
   <p>🟢 Quick access</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -108,7 +108,7 @@
             <img src="images/shein.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
-  <h3>Sumaiya Akter</h3>
+  <h3>Farida Yasmin</h3>
   <p>💬 "Open to meaningful conversations."</p>
   <p>🟢 Online now</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
