--- a/mohua/index.html
+++ b/mohua/index.html
@@ -74,7 +74,7 @@
             <img src="images/xbox.jpg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
-  <h3>Mimita Khatun</h3>
+  <h3>Marjina Akter</h3>
   <p>💬 "I reply fast, don’t be shy to say hi!"</p>
   <p>🟡 Limited availability</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
@@ -97,7 +97,7 @@
             <img src="images/netflix.png" alt="Real-Time Dating" />
           </div>
           <div class="box-content">
-  <h3>Sharmin Sultana</h3>
+  <h3>Rafika Jahan</h3>
   <p>💬 "On for a bit — message me fast!"</p>
   <p>🟡 Available briefly</p>
   <button class="gene-btn">➡️ [Start Chat]</button>
