--- a/canva/index.html
+++ b/canva/index.html
@@ -104,7 +104,7 @@
       <p>Get the free guide delivered to your inbox:</p>
       <input type="email" placeholder="Enter your email address" />
       <br />
-      <button>Send Me the Guide</button>
+      <button>Apply Now for Lifetime Access!</button>
     </div>
 
     <div class="footer">
