--- a/mohua/index.html
+++ b/mohua/index.html
@@ -27,7 +27,7 @@
 
         <div class="box">
           <div class="box-image">
-            <img src="images/amazon.jpg" alt="Play Store Real-Time Dating" />
+            <img src="https://i.imgur.com/eOx1HS9.jpeg" alt="Play Store Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Sadia Akhter</h3>
