--- a/mohua/index.html
+++ b/mohua/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
+            <img src="https://i.imgur.com/y91RrLv.jpeg" alt="Amazon Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Afia Nargis</h3>
@@ -49,7 +49,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/apple.png" alt="Xbox Real-Time Dating" />
+            <img src="https://i.imgur.com/Za1VXln.jpeg" alt="Xbox Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Sanjida Alam </h3>
@@ -60,7 +60,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/roblox.png" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/7wvKQAi.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Fariha Anjum</h3>
@@ -72,7 +72,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/xbox.jpg" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/6P3dOpE.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Fahmida Rumi</h3>
@@ -83,7 +83,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/paypal.jpg" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/rFJ27W9.jpeg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Laboni Akter</h3>
@@ -106,7 +106,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/shein.png" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/EM6ymbm.jpeg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Farida Yasmin</h3>
