--- a/mohua/index.html
+++ b/mohua/index.html
@@ -48,7 +48,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/apple.png" alt="Xbox Real-Time Dating" />
+            <img src="https://i.imgur.com/n6wWOsB.png" alt="Xbox Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Sanjida Alam </h3>
@@ -71,7 +71,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/xbox.jpg" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/shtAPgJ.jpeg" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Fahmida Rumi</h3>
@@ -94,7 +94,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/netflix.png" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/7wvKQAi.png" alt="Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Rafika Jahan</h3>
@@ -105,7 +105,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/shein.png" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/6P3dOpE.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Farida Yasmin</h3>
