--- a/mohua/index.html
+++ b/mohua/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="box">
           <div class="box-image">
-            <img src="images/amazon.jpg" alt="Play Store Real-Time Dating" />
+            <img src="https://i.imgur.com/udXl5A8.jpeg" alt="Play Store Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Sadia Akhter</h3>
@@ -37,7 +37,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/google.jpg" alt="Amazon Real-Time Dating" />
+            <img src="https://i.imgur.com/kSuzAQ8.jpeg" alt="Amazon Real-Time Dating" />
           </div>
           <div class="box-content">
   <h3>Afia Nargis</h3>
@@ -59,7 +59,7 @@
         </div>
         <div class="box">
           <div class="box-image">
-            <img src="images/roblox.png" alt="Real-Time Dating" />
+            <img src="https://i.imgur.com/n3oV374.png" alt="Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Fariha Anjum</h3>
