--- a/mohua/index.html
+++ b/mohua/index.html
@@ -24,7 +24,6 @@
     </nav>
     <main class="main">
       <div class="container">
-
         <div class="box">
           <div class="box-image">
             <img src="images/amazon.jpg" alt="Play Store Real-Time Dating" />
@@ -115,10 +114,16 @@
   <button class="gene-btn">➡️ [Start Chat]</button>
 </div>
         </div>
-
-    
-    
-
+        <div class="box">
+          <div class="box-image">
+            <img src="images/steam.png" alt="Real-Time Dating" />
+          </div>
+          <div class="box-content">
+  <h3>Nusrat Jahan</h3>
+  <p>💬 "Here for real connections only."</p>
+  <p>🟡 Available briefly</p>
+  <button class="gene-btn">➡️ [Start Chat]</button>
+</div>
         </div>
       </div>
     </main>
