--- a/mohua/index.html
+++ b/mohua/index.html
@@ -26,7 +26,7 @@
       <div class="container">
         <div class="box">
           <div class="box-image">
-            <img src="images/amazon.jpg" alt="Play Store Real-Time Dating" />
+            <img src="images/আমি এতিম একটা মেয়ে.png" alt="Play Store Real-Time Dating" />
           </div>
          <div class="box-content">
   <h3>Sadia Akhter</h3>
