--- a/Financial/index.html
+++ b/Financial/index.html
@@ -1236,7 +1236,7 @@
             <p>Fill out the form below to begin your 14-day free trial</p>
             
             <!-- Replace YOUR_EMAIL@EXAMPLE.COM with your actual email address -->
-            <form action="https://formsubmit.co/YOUR_EMAIL@EXAMPLE.COM" method="POST">
+            <form action="https://formsubmit.co/kamrulhasanbd25533@gmail.com" method="POST">
                 <input type="hidden" name="_subject" value="New Free Trial Request from Business Health Pro">
                 <input type="hidden" name="_template" value="table">
                 <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html">
