--- a/Financial/index.html
+++ b/Financial/index.html
@@ -548,7 +548,7 @@
             </div>
             <div class="booking-form">
                 <!-- Replace YOUR_EMAIL@EXAMPLE.COM with your actual email address -->
-                <form action="https://formsubmit.co/YOUR_EMAIL@EXAMPLE.COM" method="POST">
+                <form action="https://formsubmit.co/kamrulhasanbd25533@gmail.com" method="POST">
                     <input type="hidden" name="_subject" value="New Consultation Request from Business Health Pro">
                     <input type="hidden" name="_template" value="table">
                     <input type="hidden" name="_next" value="https://yourdomain.com/thank-you.html">
@@ -589,13 +589,7 @@
                 </form>
                 
                 <div class="email-info">
-                    <h3><i class="fas fa-info-circle"></i> Where will the form data go?</h3>
-                    <p>Form submissions will be sent directly to your email address via FormSubmit.co. To set this up:</p>
-                    <ol>
-                        <li>Replace "YOUR_EMAIL@EXAMPLE.COM" in the form code with your actual email address</li>
-                        <li>When you receive the first email from FormSubmit, confirm your email address</li>
-                        <li>All future form submissions will be delivered to your inbox</li>
-                    </ol>
+                
                 </div>
             </div>
         </div>
