--- a/Financial/4/index.html
+++ b/Financial/4/index.html
@@ -1009,7 +1009,7 @@
     <section class="hero">
         <div class="container">
             <h1 class="wow fadeInDown" data-wow-delay="0.3s">Your Personal Finance Consultant — Just One Step Away</h1>
-            <p class="subheadline wow fadeInDown" data-wow-delay="0.5s">A financial report isn’t just paperwork — it’s your business health check. No matter if your business is just starting out or already booming, you need organized reports at every step for smooth operations. At Ledgerly, we know there’s no one-size-fits-all, so we customize your reports in the language you understand. Who told you that you need to be a pro at accounting? We turn raw numbers into clear dashboards and decision-ready insights — so you can run your business with confidence.</p>
+            <p class="subheadline wow fadeInDown" data-wow-delay="0.5s">Your Finance Partner for Every Stage of Growth From daily bookkeeping to growth-ready financial reports, Ledgerly turns your numbers into clear decisions.</p>
             <a href="#signup" class="btn wow fadeIn" data-wow-delay="0.7s">Request a Pilot</a>
             <a href="https://wa.me/1234567890?text=Hello%20Ledgerly,%20I%20would%20like%20to%20know%20more%20about%20your%20services" class="btn btn-whatsapp wow fadeIn" data-wow-delay="1.1s" target="_blank">
                 <i class="fab fa-whatsapp"></i> Chat on WhatsApp
