--- a/Financial/6/index.html
+++ b/Financial/6/index.html
@@ -1342,6 +1342,20 @@
             <a href="#signup" class="btn" data-aos="fade-up" data-aos-delay="200">Get Started</a>
         </div>
     </section>
+  <!-- Mobile Navigation -->
+    <div class="mobile-nav" id="mobile-nav">
+        <button class="mobile-nav-close">
+            <i class="fas fa-times"></i>
+        </button>
+        <ul class="mobile-nav-links">
+            <li><a href="#home">Home</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about">About Us</a></li>
+            <li><a href="#pricing">Pricing</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </div>
+    <div class="overlay" id="overlay"></div>
 
     <footer>
         <div class="container">
